[gd_scene load_steps=22 format=2]

[ext_resource path="res://themes/new_gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/gui/Screens/Screens.gd" type="Script" id=2]
[ext_resource path="res://ubuntu-font-family/Ubuntu-B.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/Ren/nodes/ren_var_label.gd" type="Script" id=4]
[ext_resource path="res://addons/Ren/icons/ren_var_label.svg" type="Texture" id=5]
[ext_resource path="res://scenes/gui/InGame/QuickMenuButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/gui/SlotBox/SlotBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/gui/History/History.gd" type="Script" id=8]
[ext_resource path="res://scenes/gui/History/HistoryItem.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/gui/OptionsBox/OptionsBox.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/gui/Quests/QuestsBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/Ren/nodes/ren_label.gd" type="Script" id=12]
[ext_resource path="res://addons/Ren/icons/ren_text_label.svg" type="Texture" id=13]
[ext_resource path="res://scenes/gui/Labels/dialogue_text.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/examples/Test/TestNodes.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="ButtonGroup" id=2]

resource_local_to_scene = true

[sub_resource type="DynamicFont" id=3]

size = 22
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 40
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 22
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 22
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Screens" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Material", "Mouse", "Pause", "Size Flags", "Theme", "Visibility" ]

[node name="Panel" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -11.0
margin_top = -8.0
margin_right = 1033.0
margin_bottom = 615.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="TitleNVersion" type="HBoxContainer" parent="." index="1"]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 209.0
margin_top = 529.0
margin_right = 1017.0
margin_bottom = 594.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 2
_sections_unfolded = [ "Grow Direction", "Size Flags" ]

[node name="Title" type="Label" parent="TitleNVersion" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 651.0
margin_right = 750.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Ren"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 4 )
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
var_name = "title"
default = "Your new game"
type = "str"

[node name="Version" type="Label" parent="TitleNVersion" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 754.0
margin_right = 808.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = "0.5.0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
var_name = "version"
default = "0.5.0"
type = "str"

[node name="Navigation" type="Panel" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -3.0
margin_right = 204.0
margin_bottom = 599.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse", "Rect" ]

[node name="Title" type="Label" parent="Navigation" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 99.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Ren"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 4 )
_sections_unfolded = [ "Rect", "custom_fonts" ]
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
var_name = "title"
default = "Your new game"
type = "str"

[node name="ScrollContainer" type="ScrollContainer" parent="Navigation" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 109.0
margin_right = 213.0
margin_bottom = 598.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Navigation/ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 132.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "Mouse", "Size Flags" ]

[node name="Hack" type="Control" parent="Navigation/ScrollContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="NewGame" parent="Navigation/ScrollContainer/VBoxContainer" index="1" instance=ExtResource( 6 )]

margin_top = 20.0
margin_right = 132.0
margin_bottom = 54.0
text = "New Game"
align = 0

[node name="Return" parent="Navigation/ScrollContainer/VBoxContainer" index="2" instance=ExtResource( 6 )]

visible = false
margin_top = 20.0
margin_right = 140.0
margin_bottom = 52.0
text = "Return"
align = 0

[node name="History" parent="Navigation/ScrollContainer/VBoxContainer" index="3" instance=ExtResource( 6 )]

visible = false
margin_top = 72.0
margin_right = 140.0
margin_bottom = 104.0
toggle_mode = true
group = SubResource( 2 )
text = "History"
align = 0

[node name="Quests" parent="Navigation/ScrollContainer/VBoxContainer" index="4" instance=ExtResource( 6 )]

visible = false
margin_top = 72.0
margin_right = 140.0
margin_bottom = 104.0
toggle_mode = true
group = SubResource( 2 )
text = "Quests"
align = 0

[node name="Continue" parent="Navigation/ScrollContainer/VBoxContainer" index="5" instance=ExtResource( 6 )]

margin_top = 74.0
margin_right = 132.0
margin_bottom = 108.0
text = "Continue"
align = 0

[node name="Load" parent="Navigation/ScrollContainer/VBoxContainer" index="6" instance=ExtResource( 6 )]

margin_top = 128.0
margin_right = 132.0
margin_bottom = 162.0
toggle_mode = true
group = SubResource( 2 )
text = "Load"
align = 0

[node name="Save" parent="Navigation/ScrollContainer/VBoxContainer" index="7" instance=ExtResource( 6 )]

visible = false
margin_top = 280.0
margin_right = 140.0
margin_bottom = 312.0
toggle_mode = true
group = SubResource( 2 )
text = "Save"
align = 0

[node name="Options" parent="Navigation/ScrollContainer/VBoxContainer" index="8" instance=ExtResource( 6 )]

margin_top = 182.0
margin_right = 132.0
margin_bottom = 216.0
toggle_mode = true
group = SubResource( 2 )
text = "Options"
align = 0

[node name="TestNodes" parent="Navigation/ScrollContainer/VBoxContainer" index="9" instance=ExtResource( 6 )]

margin_top = 236.0
margin_right = 132.0
margin_bottom = 270.0
toggle_mode = true
group = SubResource( 2 )
text = "Test Nodes"
align = 0

[node name="About" parent="Navigation/ScrollContainer/VBoxContainer" index="10" instance=ExtResource( 6 )]

margin_top = 290.0
margin_right = 132.0
margin_bottom = 324.0
toggle_mode = true
group = SubResource( 2 )
text = "About"
align = 0

[node name="Help" type="LinkButton" parent="Navigation/ScrollContainer/VBoxContainer" index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 344.0
margin_right = 132.0
margin_bottom = 370.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.756863, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0, 0.6, 0.8, 1 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = SubResource( 2 )
text = "Help"
_sections_unfolded = [ "Theme", "custom_colors", "custom_fonts" ]

[node name="Quit" parent="Navigation/ScrollContainer/VBoxContainer" index="12" instance=ExtResource( 6 )]

margin_top = 390.0
margin_right = 132.0
margin_bottom = 424.0
toggle_mode = true
group = SubResource( 2 )
text = "Quit"
align = 0

[node name="SlotBox" parent="." index="3" instance=ExtResource( 7 )]

visible = false

[node name="HistoryBox" type="VBoxContainer" parent="." index="4"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 257.0
margin_top = 11.0
margin_right = 959.0
margin_bottom = 545.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Title" type="Label" parent="HistoryBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "History"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="ScrollContainer" type="ScrollContainer" parent="HistoryBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 702.0
margin_bottom = 534.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0
_sections_unfolded = [ "Scroll" ]

[node name="History" type="VBoxContainer" parent="HistoryBox/ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 476.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 0
script = ExtResource( 8 )
_sections_unfolded = [ "Size Flags", "custom_constants" ]
HistoryItemTemplate = ExtResource( 9 )

[node name="OptionsBox" parent="." index="5" instance=ExtResource( 10 )]

visible = false
margin_left = 199.0
margin_top = 27.0
margin_right = 1013.0

[node name="QuestsBox" parent="." index="6" instance=ExtResource( 11 )]

visible = false
margin_left = 201.0
margin_top = 2.0
margin_right = 1025.0
margin_bottom = 607.0

[node name="AboutBox" type="VBoxContainer" parent="." index="7"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 257.0
margin_top = 11.0
margin_right = 959.0
margin_bottom = 545.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Mouse" ]

[node name="Title" type="Label" parent="AboutBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "About"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse", "custom_fonts" ]

[node name="RenTextLabel" type="RichTextLabel" parent="AboutBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 702.0
margin_bottom = 534.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 12 )
_sections_unfolded = [ "BBCode", "Mouse" ]
__meta__ = {
"_editor_icon": ExtResource( 13 )
}
mode = "ren"
ren_text_file = "res://about.txt"
ren_text = "Made with {a=https://github.com/jeremi360/Ren}Ren{/a} [ren_version] on {a=https://godotengine.org/}Godot Engine{/a} [godot_version] on {a=https://github.com/jeremi360/Ren/blob/master/LICENSE} MIT License{/a}.
"
vars_names = [ "ren_version", "godot_version" ]

[node name="QuitBox" type="Control" parent="." index="8"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 257.0
margin_top = 11.0
margin_right = 959.0
margin_bottom = 545.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Title" type="Label" parent="QuitBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Quit"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Question" parent="QuitBox" index="1" instance=ExtResource( 14 )]

anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 12.0
margin_top = -128.0
margin_right = 12.0
margin_bottom = -82.0
focus_mode = 0
bbcode_text = "[center]Do you realy want to quit?[/center]"
text = "Do you realy want to quit?"
selection_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="QuitBox" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 246.0
margin_top = -328.0
margin_right = -200.0
margin_bottom = -296.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Yes" type="Button" parent="QuitBox/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 126.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Yes"
flat = true
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="No" type="Button" parent="QuitBox/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 130.0
margin_right = 256.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "No"
flat = true
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="TestNodes" parent="." index="9" instance=ExtResource( 15 )]

visible = false
margin_left = 177.0
margin_top = 129.0
margin_right = 1014.0
margin_bottom = 534.0

[connection signal="pressed" from="Navigation/ScrollContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]

[connection signal="pressed" from="Navigation/ScrollContainer/VBoxContainer/Return" to="." method="_on_Return_pressed"]

[connection signal="pressed" from="Navigation/ScrollContainer/VBoxContainer/History" to="." method="_on_History_pressed"]

[connection signal="pressed" from="Navigation/ScrollContainer/VBoxContainer/Quests" to="." method="_on_Quests_pressed"]

[connection signal="pressed" from="Navigation/ScrollContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]

[connection signal="pressed" from="Navigation/ScrollContainer/VBoxContainer/Load" to="." method="_on_Load_pressed"]

[connection signal="pressed" from="Navigation/ScrollContainer/VBoxContainer/Save" to="." method="_on_Save_pressed"]

[connection signal="pressed" from="Navigation/ScrollContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]

[connection signal="pressed" from="Navigation/ScrollContainer/VBoxContainer/TestNodes" to="." method="_on_TestNodes_pressed"]

[connection signal="pressed" from="Navigation/ScrollContainer/VBoxContainer/About" to="." method="_on_About_pressed"]

[connection signal="pressed" from="Navigation/ScrollContainer/VBoxContainer/Help" to="." method="_on_Help_pressed"]

[connection signal="pressed" from="Navigation/ScrollContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]

[connection signal="pressed" from="QuitBox/HBoxContainer/Yes" to="." method="_on_Yes_pressed"]

[connection signal="pressed" from="QuitBox/HBoxContainer/No" to="." method="_on_Return_pressed"]


